--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script type="javascript" src="js/main.js" defer></script>
 </head>
 <body>
-
+    <div class="wrapper">
+        <div class="sliderWrapper">
+            <ul class="slider">
+                <li class="sliderItem"><img src="img/pikachu.jpg" alt="pikachu"></li>
+                <li class="sliderItem"><img src="img/charmeleon.jpg" alt="charmeleon"></li>
+                <li class="sliderItem"><img src="img/kangaskan.jpg" alt="kangaskan"></li>
+                <li class="sliderItem"><img src="img/geodude.jpg" alt="geodude"></li>
+                <li class="sliderItem"><img src="img/vulpix.jpg" alt="vulpix"></li>
+            </ul>
+            <ul class="sliderPagination">
+                <li class="sliderPaginationItem"><span class="sliderPaginationItemText">1</span></li>
+                <li class="sliderPaginationItem"><span class="sliderPaginationItemText">2</span></li>
+                <li class="sliderPaginationItem"><span class="sliderPaginationItemText">3</span></li>
+                <li class="sliderPaginationItem"><span class="sliderPaginationItemText">4</span></li>
+                <li class="sliderPaginationItem"><span class="sliderPaginationItemText">5</span></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
