slider animation, basic

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Jquery Slider Test</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <script type="javascript" src="js/jquery-3.1.1.js" defer></script>
-    <script type="javascript" src="js/main.js" defer></script>
+    <script src="js/jquery-3.1.1.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
