--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li class="sliderPaginationItem"><span class="sliderPaginationItemText">4</span></li>
                 <li class="sliderPaginationItem"><span class="sliderPaginationItemText">5</span></li>
             </ul>
+            <button id="playButton">Play</button>
         </div>
     </div>
 </body>
